--- a/webroot/.htaccess
+++ b/webroot/.htaccess
@@ -1,3 +1,6 @@
+<IfModule mod_php7.c>
+    php_value memory_limit 2048M
+</IfModule>
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
