--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,16 @@
     "name": "cakephp/app",
     "description": "Mural de estágios com o Cakephp",
     "type": "project",
-    "homepage": "https://mural.ess.ufrj.br/",
+    "homepage": "https://cakephp.org",
     "license": "MIT",
-    "author": "Luiz Acosta",
     "require": {
         "php": ">=8.1",
-        "cakephp/authentication": "^3.1",
+        "cakephp/authentication": "^3.0",
         "cakephp/cakephp": "^5.0.1",
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
+        "dompdf/dompdf": "^3.0",
+        "friendsofcake/cakepdf": "^5.0",
         "mobiledetect/mobiledetectlib": "^4.8.03"
     },
     "require-dev": {
