--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "cakephp/plugin-installer": "^2.0",
         "dompdf/dompdf": "^3.0",
         "friendsofcake/cakepdf": "^5.0",
-        "mobiledetect/mobiledetectlib": "^4.8.03"
+        "mobiledetect/mobiledetectlib": "^4.8.03",
+        "mpdf/mpdf": "^8.2",
+        "tecnickcom/tcpdf": "^6.7"
     },
     "require-dev": {
         "cakephp/bake": "^3.0.0",
