--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
         "phpunit/phpunit": "^10.1.0"
     },
     "suggest": {
-		"cakephp/repl": "Console tools for a REPL interface for CakePHP applications.",
-		"markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",        "dereuromark/cakephp-ide-helper": "After baking your code, this keeps your annotations in sync with the code evolving from there on for maximum IDE and PHPStan/Psalm compatibility.",
+"cakephp/repl": "Console tools for a REPL interface for CakePHP applications.",
+"markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",        "dereuromark/cakephp-ide-helper": "After baking your code, this keeps your annotations in sync with the code evolving from there on for maximum IDE and PHPStan/Psalm compatibility.",
         "phpstan/phpstan": "PHPStan focuses on finding errors in your code without actually running it. It catches whole classes of bugs even before you write tests for the code."
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/", "/home/luis/html/mural5"
         }
     },
     "autoload-dev": {
