--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /tmp/*
 /vendor/*
 /tests/*
+composer.json
+composer.lock
 
 # OS generated files #
 ######################
@@ -15,7 +17,7 @@
 .Spotlight-V100
 .Trashes
 # Icon must end with two \r
-Icon
+Icon
 ehthumbs.db
 Thumbs.db
 .directory
