--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/", "/home/luis/html/mural5"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
