--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "require": {
         "php": ">=8.1",
-        "cakephp/authentication": "^3.1",
+        "cakephp/authentication": "^4.0",
+        "cakephp/authorization": "^3.5",
         "cakephp/cakephp": "^5.0.1",
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
